Implement view title submissions
Implement the detail pane of title that shows the submissions of the title. Update other views, centralize the icon map for title submission status (withdrawn, accepted)

--- a/src/Panama/Resources/Strings.resx
+++ b/src/Panama/Resources/Strings.resx
@@ -1241,4 +1241,7 @@ Changes will take effect after you restart the application.</value>
   <data name="WindowTitleFatalError" xml:space="preserve">
     <value>A fatal error has occured</value>
   </data>
+  <data name="TextNoTitleSubmissions" xml:space="preserve">
+    <value>No submissions for this title</value>
+  </data>
 </root>
