--- a/src/Panama/Resources/Strings.resx
+++ b/src/Panama/Resources/Strings.resx
@@ -1088,4 +1088,19 @@ Changes will take effect after you restart the application.</value>
   <data name="HeaderTagFilter" xml:space="preserve">
     <value>Tag filter</value>
   </data>
+  <data name="TextAssigned" xml:space="preserve">
+    <value>Assigned</value>
+  </data>
+  <data name="TextAvailable" xml:space="preserve">
+    <value>Available</value>
+  </data>
+  <data name="TextAssignedToFilter" xml:space="preserve">
+    <value>Tags to filter</value>
+  </data>
+  <data name="TextAvailableTags" xml:space="preserve">
+    <value>Available tags</value>
+  </data>
+  <data name="TextMultipleTag" xml:space="preserve">
+    <value>Combine multiple</value>
+  </data>
 </root>
