Message sync tool (basics)

--- a/src/Panama/Resources/Strings.resx
+++ b/src/Panama/Resources/Strings.resx
@@ -1131,4 +1131,10 @@ Changes will take effect after you restart the application.</value>
   <data name="HeaderTables" xml:space="preserve">
     <value>Tables</value>
   </data>
+  <data name="HeaderToolMessage" xml:space="preserve">
+    <value>Message Sync</value>
+  </data>
+  <data name="ToolMessageDetail" xml:space="preserve">
+    <value>This operation renames the files that are used for external submission messages to correspond to the date / time of the message and the message subject.</value>
+  </data>
 </root>
