--- a/src/Panama/Resources/Strings.resx
+++ b/src/Panama/Resources/Strings.resx
@@ -1161,4 +1161,7 @@ Changes will take effect after you restart the application.</value>
   <data name="TextClearDate" xml:space="preserve">
     <value>Clear date</value>
   </data>
+  <data name="SettingsQueue" xml:space="preserve">
+    <value>Enable title queues (requires restart)</value>
+  </data>
 </root>
