Related controller updates

--- a/src/Panama/Resources/Strings.resx
+++ b/src/Panama/Resources/Strings.resx
@@ -1164,4 +1164,13 @@ Changes will take effect after you restart the application.</value>
   <data name="SettingsQueue" xml:space="preserve">
     <value>Enable title queues</value>
   </data>
+  <data name="ConfirmationRemoveRelatedTitle" xml:space="preserve">
+    <value>This operation removes the related title from this title. It does not affect the related title itself.</value>
+  </data>
+  <data name="MenuItemAddRelated" xml:space="preserve">
+    <value>Add a related title to this title</value>
+  </data>
+  <data name="MenuItemRemoveRelated" xml:space="preserve">
+    <value>Remove this related title</value>
+  </data>
 </root>
