Add multiple id filter for related
Add the ability to filter the title list to the selected title and its related titles

--- a/src/Panama/Resources/Strings.resx
+++ b/src/Panama/Resources/Strings.resx
@@ -1173,4 +1173,7 @@ Changes will take effect after you restart the application.</value>
   <data name="MenuItemRemoveRelated" xml:space="preserve">
     <value>Remove this related title</value>
   </data>
+  <data name="MenuItemFilterTitleListToRelated" xml:space="preserve">
+    <value>Filter title list to selected title and its related titles</value>
+  </data>
 </root>
